# Reflection

./: CMakeLists.txt
include/: TypeHash.h  TypeInfo.h  VariableId.h
src/: main.cpp
