cmake_minimum_required(VERSION 3.29)
project(reflection)
set(CMAKE_CXX_STANDARD 20)               
set(CMAKE_CXX_STANDARD_REQUIRED ON)       
set(CMAKE_CXX_EXTENSIONS OFF)            
file(GLOB_RECURSE SOURCES "./src/*.cpp")
file(GLOB_RECURSE HEADERS "./include/*.h")
include_directories(include)
add_executable(reflection ${SOURCES} ${HEADERS})
